[tool.poetry]
name = "kanp"
version = "0.1.0"
description = "See video by download."
authors = ["long2ice <long2ice@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
youtube_dl = "*"
httpx = "*"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "^19.10b0"
flake8 = "*"
isort = "*"
pytest = "*"
pytest-asyncio = "*"
aiofiles = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
